--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -26,7 +26,7 @@
         <ion-input required type="password" [(ngModel)]="password"></ion-input>
       </ion-item>
       <!---Login button-->
-      <button ion-button right default-button (click)="onEvent('onLogin')">Login</button>
+      <button ion-button right default-button (click)="Login()">Login</button>
       <!---Register button-->
       <button ion-button right default-button (click)="onEvent('onRegister')">Register</button>
     </ion-col>
