added more pages template

--- a/src/pages/progress/progress.html
+++ b/src/pages/progress/progress.html
@@ -15,4 +15,25 @@
 
 <ion-content padding>
 
+  <div text-center>
+    <h2>Your <a>DREAM JOB</a></h2>
+  </div>
+  <br/>
+  
+<ion-list>
+  <ion-list-header>
+    Skills required
+  </ion-list-header>
+  <button ion-item icon-right>
+    Communication
+  </button>
+  <button ion-item icon-right>
+    Technical
+  </button>
+  <button ion-item icon-right>
+    Teamwork
+  </button> 
+</ion-list>
+
+  
 </ion-content>
