--- a/src/pages/skills/skills.html
+++ b/src/pages/skills/skills.html
@@ -14,11 +14,19 @@
 
 
 <ion-content padding>
+<ion-list>
+  <ion-list-header>
+    Skills Obtained
+  </ion-list-header>
+  <ion-card>
 
-<div>
+  <ion-card-content>
   <i>You currently do not have any skills listed here, try our skills questionnaire to help you understand what skills you most likely possess!</i>
-  <div>
-    <button ion-button clear>Start!</button>
-  </div>
-</div>
+  </ion-card-content>
+
+<button ion-button block outline>Start questionnaire</button>
+
+</ion-card>
+</ion-list>
+
 </ion-content>
