--- a/src/pages/skills/skills.html
+++ b/src/pages/skills/skills.html
@@ -24,7 +24,7 @@
   <i>You currently do not have any skills listed here, try our skills questionnaire to help you understand what skills you most likely possess!</i>
   </ion-card-content>
 
-<button ion-button block outline>Start questionnaire</button>
+<button ion-button block outline (click)="startQuestion()">Start questionnaire</button>
 
 </ion-card>
 </ion-list>
