--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,9 +6,40 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-
-  <button ion-button block (click)="Login()"> 
-    Login 
-  </button>
-</ion-content>
+<!-- Themes Login + logo -->
+<ion-grid>
+  <ion-row wrap padding>
+    <ion-col col-12 col-sm-12 col-md-12 offset-lg-3 col-lg-6 offset-xl-3 col-xl-6>
+      <button ion-button button-clear clear (click)="onEvent('onSkip')">Skip</button>
+      <!---Logo-->
+      <ion-thumbnail>
+        <img [src]="">
+      </ion-thumbnail>
+      <!---Input field username-->
+      <ion-item no-padding color="accent">
+        <ion-label color="secondary" floating>{{username}}</ion-label>
+        <ion-input required type="text" [(ngModel)]="username"></ion-input>
+      </ion-item>
+      <!---Input field password-->
+      <ion-item no-padding color="accent">
+        <ion-label color="secondary" floating>{{password}}</ion-label>
+        <ion-input required type="password" [(ngModel)]="password"></ion-input>
+      </ion-item>
+      <!---Login button-->
+      <button ion-button right default-button (click)="Login()">Login</button>
+      <!---Register button-->
+      <button ion-button right default-button (click)="onEvent('onRegister')">Register</button>
+    </ion-col>
+    <!---Share Section-->
+    <ion-col col-12 col-sm-12 col-md-12 offset-lg-3 col-lg-6 offset-xl-3 col-xl-6 social>
+      <!---Facebook button-->
+      <button ion-button color="facebook" (click)="onEvent('onFacebook')">Facebook</button>
+      <!---Twitter button-->
+      <button ion-button color="twitter" (click)="onEvent('onTwitter')">Twitter</button>
+      <!---Google button-->
+      <button ion-button color="google" (click)="onEvent('onGoogle')">Google</button>
+      <!---Pinterest button-->
+      <button ion-button color="pinterest" (click)="onEvent('onPinterest')">Pinterest</button>
+    </ion-col><!---End Share Section-->
+  </ion-row>
+  </ion-grid>
