--- a/src/pages/question/question.html
+++ b/src/pages/question/question.html
@@ -27,27 +27,27 @@
         <h1 wizard-title>{{item.title}}</h1>
         <h3 wizard-body-text>{{item.description}}</h3>
         <!--<ion-input wizard-answer required type="text" [(ngModel)]="item.answer"></ion-input>-->
-        <ion-list radio-group [(ngModel)]="item.answer">
-          <ion-item>
+        <ion-list  radio-group [(ngModel)]="item.answer">
+          <button ion-item (click)="changeSlide(1)">
             <ion-label>Disagree</ion-label>
             <ion-radio value="0" checked></ion-radio>
-          </ion-item>
-          <ion-item>
+          </button>
+          <button ion-item (click)="changeSlide(1)">
             <ion-label>Neutral</ion-label>
             <ion-radio value="1"></ion-radio>
-          </ion-item>
-          <ion-item>
+          </button>
+          <button ion-item (click)="changeSlide(1)">
             <ion-label>Agree A Little</ion-label>
             <ion-radio value="2"></ion-radio>
-          </ion-item>
-          <ion-item>
+          </button>
+          <button ion-item (click)="changeSlide(1)">
             <ion-label>Agree Moderately</ion-label>
             <ion-radio value="3"></ion-radio>
-          </ion-item>
-          <ion-item>
+          </button>
+          <button ion-item (click)="changeSlide(1)">
             <ion-label>Strongly Agree</ion-label>
             <ion-radio value="4"></ion-radio>
-          </ion-item>
+          </button>
         </ion-list>
       </div>
     </ion-slide>
