adding mock data provider and some setup connecting pages to data

--- a/src/pages/friends/friends.html
+++ b/src/pages/friends/friends.html
@@ -8,6 +8,12 @@
 
   <ion-navbar>
     <ion-title>Friends list</ion-title>
+
+    <ion-buttons end>
+      <button ion-button icon-only>
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
@@ -21,7 +27,7 @@
       </ion-thumbnail>
       <h2>Jack Pito</h2>
       <p>Has 15 skills</p>
-      <button ion-button clear item-end>View</button>
+      <button ion-button clear item-end>Endorse</button>
     </ion-item>
   </ion-list>
 </ion-content>
