--- a/src/pages/skills/skills.html
+++ b/src/pages/skills/skills.html
@@ -8,7 +8,15 @@
 
   <ion-navbar>
     <ion-title>Your Skills</ion-title>
+
+    <ion-buttons end>
+      <button ion-button icon-only (click)="AddSkill()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
+
   </ion-navbar>
+  
 
 </ion-header>
 
@@ -18,15 +26,18 @@
   <ion-list-header>
     Skills Obtained
   </ion-list-header>
-  <ion-card>
+  <ion-card *ngIf="!user.currentSkills.length">
+    <ion-card-content>
+    <i>You currently do not have any skills listed here, try our skills questionnaire to help you understand what skills you most likely possess!</i>
+    
+    <button ion-button block outline>Start questionnaire</button>
+    </ion-card-content>
+  </ion-card>
 
-  <ion-card-content>
-  <i>You currently do not have any skills listed here, try our skills questionnaire to help you understand what skills you most likely possess!</i>
-  </ion-card-content>
+  <button ion-item icon-right *ngFor="let skill of user.currentSkills" (click)="ShowExperiences(skill)">
+    {{skill.object.name}} ({{skill.experiences.length}} examples)
+  </button>
 
-<button ion-button block outline>Start questionnaire</button>
 
-</ion-card>
 </ion-list>
-
 </ion-content>
