endorse skill function added to friends page

--- a/src/pages/friends/friends.html
+++ b/src/pages/friends/friends.html
@@ -27,7 +27,7 @@
       </ion-thumbnail>
       <h2>Jack Pito</h2>
       <p>Has 15 skills</p>
-      <button ion-button clear item-end>Endorse</button>
+      <button ion-button clear item-end (click)="endorse()">Endorse</button>
     </ion-item>
   </ion-list>
 </ion-content>
