--- a/src/pages/question/question.html
+++ b/src/pages/question/question.html
@@ -25,7 +25,13 @@
         <h1 wizard-title>{{item.title}}</h1>
         <h3 wizard-body-text>{{item.description}}</h3>
         <!--<ion-input wizard-answer required type="text" [(ngModel)]="item.answer"></ion-input>-->
-        <ion-list radio-group [(ngModel)]="item.answer">
+        <button ion-button  color="secondary"  (click)="item.yes=true">Yes</button>
+        <button ion-button  color="danger" (click)="item.yes=false">No</button>
+        <div *ngIf="item.yes">
+          List your experiences..
+          <ion-input wizard-answer [(ngModel)]="item.experience"></ion-input>
+        </div>
+        <!--<ion-list radio-group [(ngModel)]="item.answer">
           <button ion-item (click)="changeSlide(1)">
             <ion-label>Disagree</ion-label>
             <ion-radio value="0" checked></ion-radio>
@@ -46,7 +52,7 @@
             <ion-label>Strongly Agree</ion-label>
             <ion-radio value="4"></ion-radio>
           </button>
-        </ion-list>
+        </ion-list>-->
       </div>
     </ion-slide>
   </ion-slides>
