added images to mock data and tidy up login page layout

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -22,10 +22,10 @@
 
 
     <div class="personal-info" text-center>
-      <img src="../../assets/profiles/face4.jpeg">
-      <h3>Joe Bloggs</h3>
+      <img src={{user.src}}>
+      <h3>{{user.name}}</h3>
     </div>
-
+<br/>
     <div class="stats-content">
       <h4>Your Stats</h4>
       <ion-grid text-center>
