--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -26,20 +26,24 @@
         <ion-input required type="password" [(ngModel)]="password"></ion-input>
       </ion-item>
       <!---Login button-->
-      <button ion-button right default-button (click)="Login()">Login</button>
+    </ion-col>
+    <ion-col col-6>
+      <button ion-button block default-button (click)="Login()">Login</button>
+    </ion-col>
+    <ion-col col-6>
       <!---Register button-->
-      <button ion-button right default-button (click)="onEvent('onRegister')">Register</button>
+      <button ion-button block default-button (click)="onEvent('onRegister')">Register</button>
     </ion-col>
     <!---Share Section-->
     <ion-col col-12 col-sm-12 col-md-12 offset-lg-3 col-lg-6 offset-xl-3 col-xl-6 social>
       <!---Facebook button-->
-      <button ion-button color="facebook" (click)="onEvent('onFacebook')">Facebook</button>
+      <button ion-button color="facebook" block (click)="onEvent('onFacebook')">Facebook</button>
       <!---Twitter button-->
-      <button ion-button color="twitter" (click)="onEvent('onTwitter')">Twitter</button>
+      <button ion-button color="twitter" block (click)="onEvent('onTwitter')">Twitter</button>
       <!---Google button-->
-      <button ion-button color="google" (click)="onEvent('onGoogle')">Google</button>
+      <button ion-button color="google" block (click)="onEvent('onGoogle')">Google</button>
       <!---Pinterest button-->
-      <button ion-button color="pinterest" (click)="onEvent('onPinterest')">Pinterest</button>
+      <button ion-button color="pinterest" block (click)="onEvent('onPinterest')">Pinterest</button>
     </ion-col><!---End Share Section-->
   </ion-row>
   </ion-grid>
