added action sheet to skills page and linked stories with same skill id into one list

--- a/src/pages/question/question.html
+++ b/src/pages/question/question.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Question</ion-title>
+    <ion-title>Skills Questionnaire</ion-title>
   </ion-navbar>
 
 </ion-header>
