added job lookup feature with appropriate json, now need activities!

--- a/src/pages/experiences/experiences.html
+++ b/src/pages/experiences/experiences.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Your Stories</ion-title>
+    <ion-title>{{skill.object.name}} Stories</ion-title>
   </ion-navbar>
 
 </ion-header>
