--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,12 +17,12 @@
       </ion-thumbnail>
       <!---Input field username-->
       <ion-item no-padding color="accent">
-        <ion-label color="secondary" floating>{{username}}</ion-label>
+        <ion-label color="secondary" floating>Username</ion-label>
         <ion-input required type="text" [(ngModel)]="username"></ion-input>
       </ion-item>
       <!---Input field password-->
       <ion-item no-padding color="accent">
-        <ion-label color="secondary" floating>{{password}}</ion-label>
+        <ion-label color="secondary" floating>Password</ion-label>
         <ion-input required type="password" [(ngModel)]="password"></ion-input>
       </ion-item>
       <!---Login button-->
