--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -31,19 +31,19 @@
       <ion-grid text-center>
         <ion-row>
           <ion-col col-6 id="skills">
-            <h1>4</h1>
+            <h1>{{user.currentSkills.length}}</h1>
             Skills
           </ion-col>
           <ion-col col-6 id="experiences">
-            <h1>17</h1>
+            <h1>{{GetNumberOfExperiences()}}</h1>
             Experiences
           </ion-col>
           <ion-col col-6 id="friends">
-            <h1>10</h1>
+            <h1>{{user.friends.length}}</h1>
             Friends
           </ion-col>
           <ion-col col-6 id="activities">
-            <h1>2</h1>
+            <h1>{{user.activities.length}}</h1>
             <p>Activities</p>
           </ion-col>
         </ion-row>
