--- a/src/pages/skills/skills.html
+++ b/src/pages/skills/skills.html
@@ -18,11 +18,9 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-  <ion-list>
-    <ion-list-header>
-      Skills Obtained
-    </ion-list-header>
-    <ion-card *ngIf="!user.currentSkills.length">
+
+
+  <ion-card *ngIf="!user.currentSkills.length">
       <ion-card-content>
         <i>You currently do not have any skills listed here, try our skills questionnaire to help you understand what skills you most likely possess!</i>
 
@@ -30,9 +28,16 @@
       </ion-card-content>
     </ion-card>
 
-    <button ion-item icon-right *ngFor="let skill of user.currentSkills" (click)="ShowExperiences(skill)">
-    {{skill.object.name}} ({{skill.experiences.length}} examples)
-  </button>
+  <ion-list *ngIf="user.currentSkills.length">
+    <ion-list-header>
+      Skills Obtained
+    </ion-list-header>
+
+  <ion-item *ngFor="let skill of user.currentSkills" >
+    <h2>{{skill.object.name}}</h2>
+    <p>Skill level: {{GetSkillLevel(skill.experiences.length)}}</p>
+    <button ion-button clear item-end (click)="ShowExperiences(skill)">Stories</button>
+  </ion-item>
 
 
   </ion-list>
