black text styling

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -23,11 +23,11 @@
 
     <div class="personal-info" text-center>
       <img src={{user.src}}>
-      <h3>{{user.name}}</h3>
+      <h3 item-title>{{user.name}}</h3>
     </div>
 <br/>
     <div class="stats-content">
-      <h4>Your Stats</h4>
+      <h4 item-subtitle>Your Stats</h4>
       <ion-grid text-center>
         <ion-row>
           <ion-col col-6 id="skills">
