finished the demooooo

--- a/src/pages/experiences/experiences.html
+++ b/src/pages/experiences/experiences.html
@@ -18,17 +18,11 @@
   <ion-card *ngFor="let experience of skill.experiences">
 
     <ion-card-content>
-      <ion-item>
-        <ion-row>
-          {{experience.story}}
-        </ion-row>
-        <ion-row>
-          <button style="background: limegreen" item-end  ion-button small color="success">
-        <ion-icon name="checkmark-circle">Validated By John Cuddidhy (Youth Worker)</ion-icon>
+      <p>{{experience.story}}</p>
+      <button style="background: limegreen" item-end  ion-button small color="success">
+        <ion-icon name="checkmark-circle">Validated</ion-icon>
       </button>
-        </ion-row>
-
-      </ion-item>
+        
     </ion-card-content>
 
   </ion-card>
