--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      APPNAME
+      What's my potential
     </ion-title>
   </ion-navbar>
 </ion-header>
