--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -37,13 +37,13 @@
     <!---Share Section-->
     <ion-col col-12 col-sm-12 col-md-12 offset-lg-3 col-lg-6 offset-xl-3 col-xl-6 social>
       <!---Facebook button-->
-      <button ion-button color="facebook" block (click)="onEvent('onFacebook')">Facebook</button>
+      <!--<button ion-button color="facebook" block (click)="onEvent('onFacebook')">Facebook</button>-->
       <!---Twitter button-->
-      <button ion-button color="twitter" block (click)="onEvent('onTwitter')">Twitter</button>
+      <!--<button ion-button color="twitter" block (click)="onEvent('onTwitter')">Twitter</button>-->
       <!---Google button-->
-      <button ion-button color="google" block (click)="onEvent('onGoogle')">Google</button>
+      <button ion-button color="google" block (click)="signInWithGoogle()">Login With Google</button>
       <!---Pinterest button-->
-      <button ion-button color="pinterest" block (click)="onEvent('onPinterest')">Pinterest</button>
+      <!--<button ion-button color="pinterest" block (click)="onEvent('onPinterest')">Pinterest</button>-->
     </ion-col><!---End Share Section-->
   </ion-row>
   </ion-grid>
