--- a/src/pages/friends/friends.html
+++ b/src/pages/friends/friends.html
@@ -26,7 +26,7 @@
         <img src={{friend.object.src}}>
       </ion-thumbnail>
       <h2>{{friend.object.name}}</h2>
-      <p>Has {{friend.object.currentSkills.length}} skills</p>
+      <p>Has {{friend.object.currentskills.length}} skills</p>
           <button ion-button clear item-end (click)="endorse()">Endorse</button>
     </ion-item>
   </ion-list>
