--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -21,33 +21,33 @@
 <ion-content padding>
 
 
-    <div class="personal-info" text-center>
-      <img src={{user.src}}>
-      <h3 item-title>{{user.name}}</h3>
-    </div>
-<br/>
-    <div class="stats-content">
-      <ion-grid text-center>
-        <ion-row>
-          <ion-col col-6 id="skills">
-            <h1>{{user.currentSkills.length}}</h1>
-            Skills
-          </ion-col>
-          <ion-col col-6 id="experiences">
-            <h1>{{GetNumberOfExperiences()}}</h1>
-            Experiences
-          </ion-col>
-          <ion-col col-6 id="friends">
-            <h1>{{user.friends.length}}</h1>
-            Friends
-          </ion-col>
-          <ion-col col-6 id="activities">
-            <h1>{{user.activities.length}}</h1>
-            <p>Activities</p>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </div>
+  <div class="personal-info" text-center>
+    <img src={{user.src}}>
+    <h3 item-title>{{user.name}}</h3>
+  </div>
+  <br/>
+  <div class="stats-content">
+    <ion-grid text-center>
+      <ion-row>
+        <ion-col col-6 id="skills">
+          <h1>{{user.currentskills? user.currentskills.length: 0}}</h1>
+          Skills
+        </ion-col>
+        <ion-col col-6 id="experiences">
+          <h1>{{GetNumberOfExperiences()}}</h1>
+          Experiences
+        </ion-col>
+        <ion-col col-6 id="friends">
+          <h1>{{user.friends ? user.friends.length : 0}}</h1>
+          Friends
+        </ion-col>
+        <ion-col col-6 id="activities">
+          <h1>{{user.activities ? user.activities.length : 0}}</h1>
+          <p>Activities</p>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
 
 
 </ion-content>
