--- a/src/pages/friends/friends.html
+++ b/src/pages/friends/friends.html
@@ -21,12 +21,12 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item *ngFor="let friend of user.friends">
+    <ion-item *ngFor="let friend of friends">
       <ion-thumbnail item-start>
-        <img src={{friend.object.src}}>
+        <img src={{friend.src}}>
       </ion-thumbnail>
-      <h2>{{friend.object.name}}</h2>
-      <p>Has {{friend.object.currentskills.length}} skills</p>
+      <h2>{{friend.name}}</h2>
+      <p>Has {{friend.currentskills.length}} skills</p>
           <button ion-button clear item-end (click)="endorse()">Endorse</button>
     </ion-item>
   </ion-list>
