added wizard and results

--- a/mobile/src/pages/personality/personality.html
+++ b/mobile/src/pages/personality/personality.html
@@ -13,12 +13,13 @@
 </ion-header>
 
 
-<ion-content padding>
-  
-  <div class="slide-deck your-class"></div>
-  <!-- Example Target Div for the widget -->
-  <div class="results your-class"></div>
-  <div class="personality-types your-class"></div>
-  <div class="personality-traits your-class"></div>
-  <button ion-button full outline (click)="retake()" >Retake</button>
+<ion-content>
+  <div style="height:600px;">
+    <div class="slide-deck your-class"></div>
+    <!-- Example Target Div for the widget -->
+    <div class="results your-class"></div>
+    <div class="personality-types your-class"></div>
+    <div class="personality-traits your-class"></div>
+    <button ion-button full outline (click)="retake()">Retake</button>
+  </div>
 </ion-content>
