--- a/mobile/src/pages/progress/progress.html
+++ b/mobile/src/pages/progress/progress.html
@@ -15,8 +15,46 @@
 
 <ion-content padding>
 
+  <ion-list>
+    <ion-card>
+      <ion-card-content (click)="startQuestion()">
+        <ion-icon *ngIf="user.personality" name="checkmark-circle" color="favorite" item-start></ion-icon>
+        <ion-icon *ngIf="!user.personality" name="checkmark-circle" color="primary" item-start></ion-icon>1. Add Personality
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-content>
+        <ion-icon *ngIf="user.qualifications" name="checkmark-circle" color="favorite" item-start></ion-icon>
+        <ion-icon *ngIf="!user.qualifications" name="checkmark-circle" color="primary" item-start></ion-icon>2. Add Qualifications
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-content>
+        <ion-icon *ngIf="user.validations" name="checkmark-circle" color="favorite" item-start></ion-icon>
+        <ion-icon *ngIf="!user.validations" name="checkmark-circle" color="primary" item-start></ion-icon>3. Skill Validation
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-content>
+        <ion-icon *ngIf="user.careers" name="checkmark-circle" color="favorite" item-start></ion-icon>
+        <ion-icon *ngIf="!user.careers" name="checkmark-circle" color="primary" item-start></ion-icon>4. Select Your Career(s)
+      </ion-card-content>
+    </ion-card>
 
-  <div *ngIf="!user.goal">
+  </ion-list>
+  <ion-list>
+    <ion-card>
+      <ion-card-content>
+        Find Courses
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-content>
+        Find Jobs
+      </ion-card-content>
+    </ion-card>
+  </ion-list>
+  <!-- <div *ngIf="!user.goal">
     <h3 item-title>Getting Started</h3>
     <p item-title>Before you get started developing your skills you need to define a goal. So think big and find a job you would like to be working as in the future. Think of your DREAM JOB!</p>
     
@@ -53,6 +91,6 @@
         </button>
       </ion-item>
     </ion-list>
-  </div>
-  
+  </div> -->
+
 </ion-content>
