--- a/mobile/src/index.html
+++ b/mobile/src/index.html
@@ -42,6 +42,7 @@
   <script src="build/main.js"></script>
 
   <script src="https://cdn.traitify.com/js/widgets/v1.js"></script>
+  <script src="https://cdn.traitify.com/js/widgets/careers.js"></script>
 </body>
 
 </html>
