--- a/mobile/src/pages/progress/progress.html
+++ b/mobile/src/pages/progress/progress.html
@@ -19,38 +19,38 @@
     <ion-card>
       <ion-card-content (click)="startQuestion()">
         <ion-icon *ngIf="user.personality" name="checkmark-circle" color="favorite" item-start></ion-icon>
-        <ion-icon *ngIf="!user.personality" name="checkmark-circle" color="primary" item-start></ion-icon>1. Add Personality
+        <ion-icon *ngIf="!user.personality" name="checkmark-circle" color="primary" item-start></ion-icon>1. Personality
       </ion-card-content>
     </ion-card>
     <ion-card>
       <ion-card-content>
         <ion-icon *ngIf="user.qualifications" name="checkmark-circle" color="favorite" item-start></ion-icon>
-        <ion-icon *ngIf="!user.qualifications" name="checkmark-circle" color="primary" item-start></ion-icon>2. Add Qualifications
+        <ion-icon *ngIf="!user.qualifications" name="checkmark-circle" color="primary" item-start></ion-icon>2. Qualifications
       </ion-card-content>
     </ion-card>
     <ion-card>
       <ion-card-content>
-        <ion-icon *ngIf="user.validations" name="checkmark-circle" color="favorite" item-start></ion-icon>
-        <ion-icon *ngIf="!user.validations" name="checkmark-circle" color="primary" item-start></ion-icon>3. Skill Validation
+        <ion-icon *ngIf="user.experience" name="checkmark-circle" color="favorite" item-start></ion-icon>
+        <ion-icon *ngIf="!user.experience" name="checkmark-circle" color="primary" item-start></ion-icon>3. Experience & Skills
       </ion-card-content>
     </ion-card>
     <ion-card>
-      <ion-card-content>
+      <ion-card-content (click)="showCareers()">
         <ion-icon *ngIf="user.careers" name="checkmark-circle" color="favorite" item-start></ion-icon>
-        <ion-icon *ngIf="!user.careers" name="checkmark-circle" color="primary" item-start></ion-icon>4. Select Your Career(s)
+        <ion-icon *ngIf="!user.careers" name="checkmark-circle" color="primary" item-start></ion-icon>4. Career Pathway
       </ion-card-content>
     </ion-card>
 
   </ion-list>
   <ion-list>
-    <ion-card>
+    <ion-card disabled="true">
       <ion-card-content>
-        Find Courses
+        Courses
       </ion-card-content>
     </ion-card>
-    <ion-card>
+    <ion-card disabled="true">
       <ion-card-content>
-        Find Jobs
+        Jobs
       </ion-card-content>
     </ion-card>
   </ion-list>
