--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -2,9 +2,6 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <script data-ionic="inject">
-    (function(w){var i=w.Ionic=w.Ionic||{};i.version='3.3.0';i.angular='4.1.2';i.staticDir='build/';})(window);
-  </script>
   <meta charset="UTF-8">
   <title>Hidden Skills</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -45,6 +42,7 @@
   <script src="build/main.js"></script>
 
   <script src="https://cdn.traitify.com/js/widgets/v1.js"></script>
+  <script src="https://cdn.traitify.com/js/widgets/careers.js"></script>
 </body>
 
 </html>
