--- a/mobile/src/pages/progress/progress.html
+++ b/mobile/src/pages/progress/progress.html
@@ -16,43 +16,35 @@
 <ion-content padding>
 
   <ion-list>
-    <ion-card>
-      <ion-card-content (click)="startQuestion()">
+    <button ion-item (click)="startQuestion()">
         <ion-icon *ngIf="user.personality" name="checkmark-circle" color="favorite" item-start></ion-icon>
-        <ion-icon *ngIf="!user.personality" name="checkmark-circle" color="primary" item-start></ion-icon>1. Personality
-      </ion-card-content>
-    </ion-card>
-    <ion-card>
-      <ion-card-content disabled="!user.personality" (click)="openQualifications()">
+        <ion-icon *ngIf="!user.personality" name="checkmark-circle" color="primary" item-start></ion-icon>1. Personality <ion-badge item-end>{{user.personality}}</ion-badge>
+    </button>
+    <button ion-item  [disabled]="!user.personality" (click)="openQualifications()">
         <ion-icon *ngIf="user.qualifications" name="checkmark-circle" color="favorite" item-start></ion-icon>
         <ion-icon *ngIf="!user.qualifications" name="checkmark-circle" color="primary" item-start></ion-icon>2. Qualifications
-      </ion-card-content>
-    </ion-card>
-    <ion-card disabled="!user.qualifications">
-      <ion-card-content>
+    </button>
+    <button ion-item  [disabled]="!user.personality" (click)="showSkills()">
         <ion-icon *ngIf="user.experience" name="checkmark-circle" color="favorite" item-start></ion-icon>
         <ion-icon *ngIf="!user.experience" name="checkmark-circle" color="primary" item-start></ion-icon>3. Experience & Skills
-      </ion-card-content>
-    </ion-card>
-    <ion-card disabled="!user.career">
-      <ion-card-content (click)="showCareers()">
+    </button>
+    <button ion-item  [disabled]="!user.personality" (click)="showCareers()">
         <ion-icon *ngIf="user.career" name="checkmark-circle" color="favorite" item-start></ion-icon>
         <ion-icon *ngIf="!user.career" name="checkmark-circle" color="primary" item-start></ion-icon>4. Career Pathway
-      </ion-card-content>
-    </ion-card>
+    </button>
 
   </ion-list>
   <ion-list>
-    <ion-card disabled="true">
-      <ion-card-content>
+    <button ion-item [disabled]="!user.career">
+
         Courses
-      </ion-card-content>
-    </ion-card>
-    <ion-card disabled="true">
-      <ion-card-content>
+ 
+    </button>
+    <button ion-item [disabled]="!user.career">
+
         Jobs
-      </ion-card-content>
-    </ion-card>
+
+    </button>
   </ion-list>
   <!-- <div *ngIf="!user.goal">
     <h3 item-title>Getting Started</h3>
