--- a/mobile/src/pages/skills/skills.html
+++ b/mobile/src/pages/skills/skills.html
@@ -19,14 +19,13 @@
 </ion-header>
 <ion-content padding>
 
-
-  <ion-card *ngIf="!user.currentskills || !user.currentskills.length">
+  <!-- <ion-card *ngIf="!user.currentskills || !user.currentskills.length">
     <ion-card-content>
       <i>You currently do not have any skills listed here, try our skills questionnaire to help you understand what skills you most likely possess!</i>
 
       <button ion-button block outline (click)="startQuestion()">Start questionnaire</button>
     </ion-card-content>
-  </ion-card>
+  </ion-card> -->
 
   <ion-list *ngIf="user.currentskills && user.currentskills.length">
     <ion-list-header>
@@ -39,9 +38,6 @@
       <button ion-button clear item-end (click)="ShowExperiences(skill)">Stories</button>
     </ion-item>
 
-
   </ion-list>
-  <a ion-button href="assets/profiles/startercv.docx" download block *ngIf="user.currentskills && user.currentskills.length >2">
-    <ion-icon name="document">Generate CV</ion-icon>
-  </a>
+
 </ion-content>
