--- a/mobile/src/pages/career/career.html
+++ b/mobile/src/pages/career/career.html
@@ -22,15 +22,16 @@
           <ul no-margin no-padding class="collapsible">
             <li no-margin *ngFor="let d of careers; let i=index">
               <!-- Expandable Full image with CTA Header-->
-              <div class="collapsible-header">
+              <div class="collapsible-header" (click)="selected===i?selected=-1:selected=i;false">
                 <ion-item no-margin no-padding no-lines background-size item-bcg [ngStyle]="{'background-image': 'url(' + d.career.picture + ')'}">
                   <!-- <img src="{{d.career.picture}}"> -->
                   <ion-badge style="z-index:1000" color="secondary" item-start>{{d.score | number:'2.1-1'}}%</ion-badge>
                   <ion-icon style="z-index:1000" item-end *ngIf="user.career && user.career.career.id === d.career.id" name="checkmark-circle"
                     color="favorite" item-start></ion-icon>
                   <h3 item-title>{{d.career.title}}</h3>
-                  <button ion-button right default-button (click)="selected===i?selected=-1:selected=i">
-                          ...
+                  <button ion-button default-button (click)="selected===i?selected=-1:selected=i;$event.stopPropagation()">
+                      <ion-icon name="{{selected===i? 'arrow-up':'arrow-down'}}"></ion-icon>     
+                    <span class="icon" [ngClass]=""></span>
                     </button>
                 </ion-item>
               </div>
@@ -67,13 +68,13 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
-                      <ion-col col-5>
-                        <ion-label>Training</ion-label>
-                      </ion-col>
-                      <ion-col col-7>
-                        {{d.career.experience_level.job_training}}
-                      </ion-col>
-                    </ion-row>
+                    <ion-col col-5>
+                      <ion-label>Training</ion-label>
+                    </ion-col>
+                    <ion-col col-7>
+                      {{d.career.experience_level.job_training}}
+                    </ion-col>
+                  </ion-row>
                   <button ion-button block (click)="choose(d)">Choose This Career Path</button>
                 </div>
               </div>
