--- a/mobile/src/pages/personality/personality.html
+++ b/mobile/src/pages/personality/personality.html
@@ -14,12 +14,16 @@
 
 
 <ion-content>
-  <div style="height:600px;">
+  <div style="height:calc(100%)">
     <div class="slide-deck your-class"></div>
     <!-- Example Target Div for the widget -->
     <div class="results your-class"></div>
     <div class="personality-types your-class"></div>
     <div class="personality-traits your-class"></div>
-    <button ion-button full outline (click)="retake()">Retake</button>
+    
   </div>
+
 </ion-content>
+<ion-footer class="footer">
+    <button ion-button full outline (click)="retake()">Retake</button>
+</ion-footer>
