--- a/mobile/src/pages/progress/progress.html
+++ b/mobile/src/pages/progress/progress.html
@@ -17,32 +17,41 @@
 
   <ion-list>
     <button ion-item (click)="startQuestion()">
-        <ion-icon *ngIf="user.personality" name="checkmark-circle" color="favorite" item-start></ion-icon>
-        <ion-icon *ngIf="!user.personality" name="checkmark-circle" color="primary" item-start></ion-icon>1. Personality <div><ion-badge item-end>{{user.personality.personality_blend.name}}</ion-badge></div>
+      <ion-icon *ngIf="user.personality" name="checkmark-circle" color="favorite" item-start></ion-icon>
+      <ion-icon *ngIf="!user.personality" name="checkmark-circle" color="primary" item-start></ion-icon>1. Personality
+      <div>
+        <p text-wrap>{{user.personality.personality_blend.name}}</p>
+      </div>
     </button>
     <button ion-item [disabled]="!user.personality" (click)="openQualifications()">
-        <ion-icon *ngIf="user.qualifications" name="checkmark-circle" color="favorite" item-start></ion-icon>
-        <ion-icon *ngIf="!user.qualifications" name="checkmark-circle" color="primary" item-start></ion-icon>2. Qualifications
-    </button>
-    <button ion-item [disabled]="!user.personality" (click)="showSkills()">
-        <ion-icon *ngIf="user.experience" name="checkmark-circle" color="favorite" item-start></ion-icon>
-        <ion-icon *ngIf="!user.experience" name="checkmark-circle" color="primary" item-start></ion-icon>3. Experience & Skills
+      <ion-icon *ngIf="user.qualifications" name="checkmark-circle" color="favorite" item-start></ion-icon>
+      <ion-icon *ngIf="!user.qualifications" name="checkmark-circle" color="primary" item-start></ion-icon>2. Qualifications
+      <p text-wrap>{{user.qualifications.attainment | attainment}}</p>
     </button>
     <button ion-item [disabled]="!user.personality" (click)="showCareers()">
-        <ion-icon *ngIf="user.career" name="checkmark-circle" color="favorite" item-start></ion-icon>
-        <ion-icon *ngIf="!user.career" name="checkmark-circle" color="primary" item-start></ion-icon>4. Career Pathway <div><ion-badge item-end>{{user.career.career.title}}</ion-badge></div>
+      <ion-icon *ngIf="user.career" name="checkmark-circle" color="favorite" item-start></ion-icon>
+      <ion-icon *ngIf="!user.career" name="checkmark-circle" color="primary" item-start></ion-icon>3. Career Pathway
+      <div>
+        <p text-wrap>{{user.career.career.title}}</p>
+      </div>
     </button>
-
+    <button ion-item [disabled]="!user.personality" (click)="showSkills()">
+      <ion-icon *ngIf="user.experience" name="checkmark-circle" color="favorite" item-start></ion-icon>
+      <ion-icon *ngIf="!user.experience" name="checkmark-circle" color="primary" item-start></ion-icon>4. Experience & Skills
+      <p text-wrap>0 Skills, 0 Experience</p>
+    </button>
   </ion-list>
   <ion-list>
     <button ion-item [disabled]="!user.career">
 
-        Courses
- 
+      Courses
+      <p text-wrap>0 Recommended, 0 New, 0 Applied For</p>
+
     </button>
     <button ion-item [disabled]="!user.career">
 
-        Jobs
+      Jobs
+      <p>0 Recommended, 0 New, 0 Applied For</p>
 
     </button>
   </ion-list>
